Make a working version of the metagame branch