@@ -2,7 +2,6 @@ package com.ebicep.warlords.maps.state;
 
 import com.ebicep.jda.BotManager;
 import com.ebicep.warlords.Warlords;
-import com.ebicep.warlords.commands.debugcommands.ImposterCommand;
 import com.ebicep.warlords.commands.debugcommands.RecordGamesCommand;
 import com.ebicep.warlords.database.DatabaseManager;
 import com.ebicep.warlords.database.repositories.games.pojos.DatabaseGame;
@@ -14,13 +13,14 @@ import com.ebicep.warlords.maps.Game.Stats;
 import com.ebicep.warlords.maps.GameAddon;
 import com.ebicep.warlords.maps.Team;
 import com.ebicep.warlords.maps.option.Option;
+import com.ebicep.warlords.maps.option.marker.TimerSkipAbleMarker;
+import com.ebicep.warlords.maps.option.marker.scoreboard.ScoreboardHandler;
 import com.ebicep.warlords.player.CustomScoreboard;
 import com.ebicep.warlords.player.ExperienceManager;
 import com.ebicep.warlords.player.PlayerSettings;
 import com.ebicep.warlords.player.WarlordsPlayer;
 import com.ebicep.warlords.sr.SRCalculator;
-import com.ebicep.warlords.util.PacketUtils;
-import com.ebicep.warlords.util.RemoveEntities;
+import com.ebicep.warlords.util.*;
 import org.bukkit.ChatColor;
 import org.bukkit.entity.Player;
 import org.bukkit.scoreboard.DisplaySlot;
@@ -28,27 +28,17 @@ import org.bukkit.scoreboard.Objective;
 import org.bukkit.scoreboard.Scoreboard;
 
 import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-import java.text.SimpleDateFormat;
 import java.util.*;
-import java.util.function.BiConsumer;
-import java.util.function.BinaryOperator;
-import java.util.function.Function;
-import java.util.function.Supplier;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
 
 public class PlayingState implements State, TimerDebugAble {
-    private static final int OVERTIME_TIME = 60 * 20;
 
-    private static final int ENDING_SCORE_LIMIT = 1000;
-
-    private boolean overTimeActive = false;
-    private int pointLimit = 0;
     private final Game game;
+    private WarlordsGameTriggerWinEvent winEvent;
+    private int counter = 0;
+    private int timer = 0;
 
     public PlayingState(@Nonnull Game game) {
         this.game = game;
@@ -90,10 +80,6 @@ public class PlayingState implements State, TimerDebugAble {
         this.addPoints(Team.RED, i);
     }
 
-    public boolean isOvertime() {
-        return this.overTimeActive;
-    }
-
     @Nonnull
     public Game getGame() {
         return game;
@@ -109,13 +95,15 @@ public class PlayingState implements State, TimerDebugAble {
         RemoveEntities.doRemove(this.game);
 
         this.game.forEachOfflinePlayer((player, team) -> {
-            PlayerSettings playerSettings = Warlords.getPlayerSettings(player.getUniqueId());
-            Warlords.addPlayer(new WarlordsPlayer(
-                    player,
-                    this,
-                    team,
-                    playerSettings
-            ));
+            if (team != null) {
+                PlayerSettings playerSettings = Warlords.getPlayerSettings(player.getUniqueId());
+                Warlords.addPlayer(new WarlordsPlayer(
+                        player,
+                        this,
+                        team,
+                        playerSettings
+                ));
+            }
         });
         this.game.forEachOfflineWarlordsPlayer(wp -> {
             CustomScoreboard customScoreboard = Warlords.playerScoreboards.get(wp.getUuid());
@@ -128,61 +116,50 @@ public class PlayingState implements State, TimerDebugAble {
 
         Warlords.newChain()
                 .async(() -> game.forEachOfflinePlayer((player, team) -> {
-                    DatabasePlayer databasePlayer = DatabaseManager.playerService.findByUUID(player.getUniqueId());
-                    DatabaseManager.updatePlayerAsync(databasePlayer);
-                    DatabaseManager.loadPlayer(player.getUniqueId(), PlayersCollections.SEASON_5, () -> {
-                    });
-                    DatabaseManager.loadPlayer(player.getUniqueId(), PlayersCollections.WEEKLY, () -> {
-                    });
-                    DatabaseManager.loadPlayer(player.getUniqueId(), PlayersCollections.DAILY, () -> {
-                    });
-                })).execute();
+            DatabasePlayer databasePlayer = DatabaseManager.playerService.findByUUID(player.getUniqueId());
+            DatabaseManager.updatePlayerAsync(databasePlayer);
+            DatabaseManager.loadPlayer(player.getUniqueId(), PlayersCollections.SEASON_5, () -> {
+            });
+            DatabaseManager.loadPlayer(player.getUniqueId(), PlayersCollections.WEEKLY, () -> {
+            });
+            DatabaseManager.loadPlayer(player.getUniqueId(), PlayersCollections.DAILY, () -> {
+            });
+        })).execute();
         game.setAcceptsPlayers(true);
         game.setAcceptsSpectators(false);
         game.registerEvents(new Listener() {
             @EventHandler(ignoreCancelled = true, priority = EventPriority.MONITOR)
             public void onWin(WarlordsGameTriggerWinEvent event) {
                 game.setNextState(new EndState(game, event));
+                winEvent = event;
             }
+        });
+        new GameRunnable(game) {
+            @Override
+            public void run() {
+                giveScoreboard();
+            }
+
+        }.runTaskTimer(0, 10);
+        new GameRunnable(game) {
+            @Override
+            public void run() {
+                counter++;
+                timer += GameRunnable.SECOND;
+                if (counter >= 60) {
+                    counter -= 60;
+                    PlayerFilter.playingGame(game).forEach(wp -> wp.getStats().advanceMinute());
+                }
+            }
+        }.runTaskTimer(0, GameRunnable.SECOND);
+        game.registerGameMarker(TimerSkipAbleMarker.class, (delay) -> {
+            counter += delay / GameRunnable.SECOND;
+            timer += delay;
         });
     }
 
     @Override
     public State run() {
-        this.timer--;
-        if (forceEnd) {
-            return getEndState(null);
-        }
-        if (this.timer <= 0) {
-            if (this.overTimeActive) {
-                State next = nextStateByPoints();
-                return next == null ? getEndState(null) : next;
-            } else {
-                State next = nextStateByPoints();
-                if (next == null) {
-                    this.timer = OVERTIME_TIME;
-                    this.overTimeActive = true;
-                    assert getStats(Team.BLUE).points == getStats(Team.RED).points;
-                } else {
-                    return next;
-                }
-            }
-        }
-        if (timer % 10 == 0) {
-            giveScoreboard();
-        }
-
-        //update every 5 seconds
-        if (timer % 100 == 0) {
-            BotManager.sendStatusMessage(false);
-        }
-
-        int redPoints = getStats(Team.RED).points;
-        int bluePoints = getStats(Team.BLUE).points;
-        if (redPoints >= this.pointLimit || bluePoints >= this.pointLimit || (Math.abs(redPoints - bluePoints) >= MERCY_LIMIT && this.timer < game.getMap().getGameTimerInTicks() - 20 * 60 * 5)) {
-            giveScoreboard();
-            return nextStateByPoints();
-        }
         return null;
     }
 
@@ -190,22 +167,26 @@ public class PlayingState implements State, TimerDebugAble {
     @SuppressWarnings("null")
     public void end() {
 
-        Warlords.getPlayers().forEach(((uuid, warlordsPlayer) -> warlordsPlayer.removeGrave()));
+        PlayerFilter.playingGame(game).forEach(WarlordsPlayer::removeGrave);
 
         System.out.println(" ----- GAME END ----- ");
         System.out.println("RecordGames = " + RecordGamesCommand.recordGames);
-        System.out.println("Imposter = " + ImposterCommand.enabled);
+        System.out.println("Imposter = " + game.getAddons().contains(GameAddon.IMPOSTER_MODE));
         System.out.println("Private = " + game.getAddons().contains(GameAddon.PRIVATE_GAME));
-        System.out.println("Force End = " + forceEnd);
+        System.out.println("Force End = " + (winEvent == null));
         System.out.println("Player Count = " + game.playersCount());
+        System.out.println("Players = " + game.getPlayers().keySet().toString());
         System.out.println("Timer = " + timer);
         System.out.println(" ----- GAME END ----- ");
 
-        List<WarlordsPlayer> players = new ArrayList<>(Warlords.getPlayers().values());
-        float highestDamage = players.stream().sorted(Comparator.comparing(WarlordsPlayer::getTotalDamage).reversed()).collect(Collectors.toList()).get(0).getTotalDamage();
-        float highestHealing = players.stream().sorted(Comparator.comparing(WarlordsPlayer::getTotalHealing).reversed()).collect(Collectors.toList()).get(0).getTotalHealing();
+        List<WarlordsPlayer> players = PlayerFilter.playingGame(game).toList();
+        if (players.isEmpty()) {
+            return;
+        }
+        float highestDamage = players.stream().sorted(Comparator.comparing((WarlordsPlayer wp) -> wp.getStats().total().getDamage()).reversed()).findFirst().get().getStats().total().getDamage();
+        float highestHealing = players.stream().sorted(Comparator.comparing((WarlordsPlayer wp) -> wp.getStats().total().getHealing()).reversed()).findFirst().get().getStats().total().getHealing();
         //PUBS
-        if (!game.getAddons().contains(GameAddon.PRIVATE_GAME) && !ImposterCommand.enabled && !forceEnd && game.playersCount() >= 12) {
+        if (!game.getAddons().contains(GameAddon.PRIVATE_GAME) && !game.getAddons().contains(GameAddon.IMPOSTER_MODE) && winEvent != null && game.playersCount() >= 12) {
             String gameEnd = "[GAME] A Public game ended with ";
             if (getBluePoints() > getRedPoints()) {
                 BotManager.sendMessageToNotificationChannel(gameEnd + "**BLUE** winning " + getBluePoints() + " to " + getRedPoints(), true);
@@ -215,10 +196,10 @@ public class PlayingState implements State, TimerDebugAble {
                 BotManager.sendMessageToNotificationChannel(gameEnd + "a **DRAW**", true);
             }
             if (highestDamage <= 750000 && highestHealing <= 750000) {
-                DatabaseGame.addGame(PlayingState.this, true);
+                DatabaseGame.addGame(game, winEvent, true);
                 System.out.println(ChatColor.GREEN + "[Warlords] This PUB game was added to the database and player information was changed");
             } else {
-                DatabaseGame.addGame(PlayingState.this, false);
+                DatabaseGame.addGame(game, winEvent, false);
                 System.out.println(ChatColor.GREEN + "[Warlords] This PUB game was added to the database (INVALID DAMAGE/HEALING) but player information remained the same");
             }
 
@@ -229,9 +210,8 @@ public class PlayingState implements State, TimerDebugAble {
                         SRCalculator.recalculateSR();
                     })
                     .execute();
-        }
-        //COMPS
-        else if (RecordGamesCommand.recordGames && !ImposterCommand.enabled && !forceEnd && game.playersCount() >= 16 && timer <= 12000) {
+        } //COMPS
+        else if (RecordGamesCommand.recordGames && !game.getAddons().contains(GameAddon.IMPOSTER_MODE) && winEvent != null && game.playersCount() >= 16 && timer <= 12000) {
             String gameEnd = "[GAME] A game ended with ";
             if (getBluePoints() > getRedPoints()) {
                 BotManager.sendMessageToNotificationChannel(gameEnd + "**BLUE** winning " + getBluePoints() + " to " + getRedPoints(), true);
@@ -241,17 +221,16 @@ public class PlayingState implements State, TimerDebugAble {
                 BotManager.sendMessageToNotificationChannel(gameEnd + "a **DRAW**", true);
             }
             if (highestDamage <= 750000 && highestHealing <= 750000) {
-                DatabaseGame.addGame(PlayingState.this, true);
+                DatabaseGame.addGame(game, winEvent, true);
                 System.out.println(ChatColor.GREEN + "[Warlords] This COMP game was added to the database and player information was changed");
             } else {
-                DatabaseGame.addGame(PlayingState.this, false);
+                DatabaseGame.addGame(game, winEvent, false);
                 System.out.println(ChatColor.GREEN + "[Warlords] This COMP game was added to the database (INVALID DAMAGE/HEALING) but player information remained the same");
             }
-        }
-        //END GAME
+        } //END GAME
         else {
-            if (game.getAddons().contains(GameAddon.PRIVATE_GAME)&& game.playersCount() >= 6 && timer <= 12000) {
-                DatabaseGame.addGame(PlayingState.this, false);
+            if (game.getAddons().contains(GameAddon.PRIVATE_GAME) && game.playersCount() >= 6 && timer <= 12000) {
+                DatabaseGame.addGame(game, winEvent, false);
                 System.out.println(ChatColor.GREEN + "[Warlords] This COMP game was added to the database but player information remained the same");
             } else {
                 System.out.println(ChatColor.GREEN + "[Warlords] This PUB/COMP game was not added to the database and player information remained the same");
@@ -262,75 +241,25 @@ public class PlayingState implements State, TimerDebugAble {
     @Override
     public void skipTimer() {
         // TODO loop over options and decrement them is needed
-        this.timer = 0;
+        int maxSkip = Integer.MAX_VALUE;
+        for (TimerSkipAbleMarker marker : game.getMarkers(TimerSkipAbleMarker.class)) {
+            if (marker.getDelay() > 0) {
+                maxSkip = Math.min(marker.getDelay(), maxSkip);
+            }
+        }
+        for (TimerSkipAbleMarker marker : game.getMarkers(TimerSkipAbleMarker.class)) {
+            marker.skipTimer(maxSkip);
+        }
     }
 
     @Override
     public void resetTimer() throws IllegalStateException {
-        this.timer = game.getMap().getGameTimerInTicks();
-        this.pointLimit = ENDING_SCORE_LIMIT;
-        this.overTimeActive = false;
-    }
-
-    private EndState getEndState(@Nullable Team winner) {
-        return new EndState(this.game, winner, this.getStats(Team.RED), this.getStats(Team.BLUE));
-    }
-
-    @Nullable
-    public Team calculateWinnerByPoints() {
-        int redPoints = getStats(Team.RED).points();
-        int bluePoints = getStats(Team.BLUE).points();
-        if (redPoints > bluePoints) {
-            return Team.RED;
-        }
-        if (bluePoints > redPoints) {
-            return Team.BLUE;
-        }
-        return null;
-    }
-
-    @Nullable
-    private State nextStateByPoints() {
-        Team winner = calculateWinnerByPoints();
-        if (winner != null) {
-            return getEndState(winner);
-        }
-        return null;
-    }
-
-    public void resetStats() {
-        for (Team team : Team.values()) {
-            stats.put(team, new Stats(team));
-        }
-    }
-
-    public void addCapture(WarlordsPlayer capper) {
-        getStats(capper.getTeam()).captures++;
-        addPoints(capper.getTeam(), SCORE_CAPTURE_POINTS);
-    }
-
-    public void endGame() {
-        this.forceEnd = true;
-    }
-
-    public boolean isForceEnd() {
-        return forceEnd;
-    }
-
-    public int getPointLimit() {
-        return pointLimit;
     }
 
     private void giveScoreboard() {
-        // TODO
-        for (WarlordsPlayer value : Warlords.getPlayers().values()) {
-            if (Warlords.playerScoreboards.get(value.getUuid()) != null) {
-                updateBasedOnGameState(false, Warlords.playerScoreboards.get(value.getUuid()), value);
-            }
-        }
-        for (UUID spectator : game.spectators()) {
-            updateBasedOnGameState(false, Warlords.playerScoreboards.get(spectator), null);
-        }
+        game.forEachOnlinePlayer((player, team) -> {
+            this.onPlayerReJoinGame(player);
+        });
     }
 
     public void updateHealth(CustomScoreboard customScoreboard) {
@@ -363,7 +292,7 @@ public class PlayingState implements State, TimerDebugAble {
                     temp.setSuffix(ChatColor.DARK_GRAY + " [" + ChatColor.GOLD + "Lv" + ExperienceManager.getLevelString(ExperienceManager.getLevelForSpec(warlordsPlayer.getUuid(), warlordsPlayer.getSpecClass())) + ChatColor.DARK_GRAY + "]");
                 } else {
                     scoreboard.getTeam(warlordsPlayer.getName()).setPrefix(ChatColor.DARK_GRAY + "[" + ChatColor.GOLD + warlordsPlayer.getSpec().getClassNameShort() + ChatColor.DARK_GRAY + "] " + team.teamColor());
-                    if (warlordsPlayer.getGameState().flags().hasFlag(warlordsPlayer)) {
+                    if (warlordsPlayer.getCarriedFlag() != null) {
                         scoreboard.getTeam(warlordsPlayer.getName()).setSuffix(ChatColor.DARK_GRAY + "[" + ChatColor.GRAY + "Lv" + ExperienceManager.getLevelString(ExperienceManager.getLevelForSpec(warlordsPlayer.getUuid(), warlordsPlayer.getSpecClass())) + ChatColor.DARK_GRAY + "]" + ChatColor.WHITE + "⚑");
                     } else {
                         scoreboard.getTeam(warlordsPlayer.getName()).setSuffix(ChatColor.DARK_GRAY + " [" + ChatColor.GRAY + "Lv" + ExperienceManager.getLevelString(ExperienceManager.getLevelForSpec(warlordsPlayer.getUuid(), warlordsPlayer.getSpecClass())) + ChatColor.DARK_GRAY + "]");
@@ -390,87 +319,39 @@ public class PlayingState implements State, TimerDebugAble {
         this.updateHealth(customScoreboard);
         this.updateNames(customScoreboard);
 
-        String[] entries = new String[15];
+        List<String> scoreboard = new ArrayList<>();
 
-
-        SimpleDateFormat format = new SimpleDateFormat("MM/dd/yyyy - kk:mm");
-        format.setTimeZone(TimeZone.getTimeZone("EST"));
-
-        //date
-        entries[14] = ChatColor.GRAY + format.format(new Date());
-
-        // Points
-        entries[12] = ChatColor.BLUE + "BLU: " + ChatColor.AQUA + this.getBluePoints() + ChatColor.GOLD + "/" + this.getPointLimit();
-        entries[11] = ChatColor.RED + "RED: " + ChatColor.AQUA + this.getRedPoints() + ChatColor.GOLD + "/" + this.getPointLimit();
-
-        // Timer
-        com.ebicep.warlords.maps.Team team = this.calculateWinnerByPoints();
-        if (team != null) {
-            entries[9] = team.coloredPrefix() + ChatColor.GOLD + " Wins in: " + ChatColor.GREEN + getTimeLeftString();
-        } else {
-            entries[9] = ChatColor.WHITE + "Time Left: " + ChatColor.GREEN + getTimeLeftString();
-        }
-
-        if (warlordsPlayer != null) {
-            entries[4] = ChatColor.WHITE + "Spec: " + ChatColor.GREEN + warlordsPlayer.getSpec().getClass().getSimpleName();
-            if (game.getAddons().contains(GameAddon.IMPOSTER_MODE)) {
-                if ((ImposterCommand.blueImposterName != null && ImposterCommand.blueImposterName.equalsIgnoreCase(warlordsPlayer.getName())) ||
-                        (ImposterCommand.redImposterName != null && ImposterCommand.redImposterName.equals(warlordsPlayer.getName()))
-                ) {
-                    entries[3] = ChatColor.WHITE + "Role: " + ChatColor.RED + "IMPOSTER";
-                } else {
-                    if (ImposterCommand.blueImposterName != null && ImposterCommand.redImposterName != null) {
-                        entries[3] = ChatColor.WHITE + "Role: " + ChatColor.GREEN + "INNOCENT";
-                    }
-                }
+        String lastGroup = null;
+        boolean lastWasEmpty = true;
+        for (ScoreboardHandler handler : Utils.iterable(game
+                .getScoreboardHandlers()
+                .stream()
+                .sorted(Comparator.comparing((ScoreboardHandler sh) -> sh.getPriority(warlordsPlayer)))
+        )) {
+            String group = handler.getGroup();
+            if ((lastGroup == null || !lastGroup.equals(group)) && !lastWasEmpty) {
+                scoreboard.add("");
+                lastWasEmpty = true;
             }
-            entries[2] = ChatColor.GREEN.toString() + warlordsPlayer.getTotalKills() + ChatColor.RESET + " Kills " +
-                    ChatColor.GREEN + warlordsPlayer.getTotalAssists() + ChatColor.RESET + " Assists";
+            lastGroup = group;
+            List<String> handlerContents = handler.computeLines(warlordsPlayer);
+            if (!handlerContents.isEmpty()) {
+                lastWasEmpty = false;
+                scoreboard.addAll(handlerContents);
+            }
         }
 
-        entries[0] = ChatColor.YELLOW + Warlords.VERSION;
-
-        Collections.reverse(Arrays.asList(entries));
-
-        customScoreboard.giveNewSideBar(init, entries);
+        customScoreboard.giveNewSideBar(init, scoreboard);
     }
 
-    private static <K, V, M extends Map<K, V>> BinaryOperator<M> mapMerger(BinaryOperator<V> mergeFunction) {
-        return (m1, m2) -> {
-            for (Map.Entry<K, V> e : m2.entrySet())
-                m1.merge(e.getKey(), e.getValue(), mergeFunction);
-            return m1;
-        };
+    @Override
+    public void onPlayerReJoinGame(Player player) {
+        WarlordsPlayer wp = Warlords.getPlayer(player);
+        updateBasedOnGameState(false, Warlords.playerScoreboards.get(player.getUniqueId()), wp);
     }
 
-    // We have to copy this to allow null keys
-    public static <T, K, D, A, M extends Map<K, D>> Collector<T, ?, M> groupingBy(
-            Function<? super T, ? extends K> classifier,
-            Supplier<M> mapFactory,
-            Collector<? super T, A, D> downstream
-    ) {
-        Supplier<A> downstreamSupplier = downstream.supplier();
-        BiConsumer<A, ? super T> downstreamAccumulator = downstream.accumulator();
-        BiConsumer<Map<K, A>, T> accumulator = (m, t) -> {
-            K key = classifier.apply(t);
-            A container = m.computeIfAbsent(key, k -> downstreamSupplier.get());
-            downstreamAccumulator.accept(container, t);
-        };
-        BinaryOperator<Map<K, A>> merger = PlayingState.<K, A, Map<K, A>>mapMerger(downstream.combiner());
-        @SuppressWarnings("unchecked")
-        Supplier<Map<K, A>> mangledFactory = (Supplier<Map<K, A>>) mapFactory;
-        @SuppressWarnings("unchecked")
-        Function<A, A> downstreamFinisher = (Function<A, A>) downstream.finisher();
-        Function<Map<K, A>, M> finisher = intermediate -> {
-            intermediate.replaceAll((k, v) -> downstreamFinisher.apply(v));
-            @SuppressWarnings("unchecked")
-            M castResult = (M) intermediate;
-            return castResult;
-        };
-        if (downstream.characteristics().contains(Collector.Characteristics.IDENTITY_FINISH)) {
-            return Collector.of(mangledFactory, accumulator, merger, finisher, Collector.Characteristics.IDENTITY_FINISH);
-        } else {
-            return Collector.of(mangledFactory, accumulator, merger, finisher);
-        }
+    public int getTicksElapsed() {
+        return this.timer;
     }
+
 }
